# oxford-group-2-fullcode-capstone-pub

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
outputs/gpt-4/: Blog with input.txt  apple-iphone16promax.txt  article.txt  strategy.txt
outputs/gpt-4o-mini/: article.txt  strategy.txt
